2.dvga-k8s/dvga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvga-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dvga
  template:
    metadata:
      labels:
        component: dvga
    spec:
      containers:
        - name: dvga
          image: navidahm3d/dvga
          ports:
            - containerPort: 80
