2.dvga-k8s/dvga-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvga-service
spec:
  type: ClusterIP
  selector:
    component: dvga
  ports:
    - port: 80
      targetPort: 80
