2.dvga-k8s/dvga-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvga-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dvga.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dvga-service
                port:
                  number: 80
